experiments/ppc_celeba_homoskedastic_eval: collect metrics from test-step runs
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/ppc_celeba_homoskedastic_eval.ipynb
+++ b/experiments/ppc_celeba_homoskedastic_eval.ipynb
@@ -106,7 +106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Missing logger folder: saved/log/Homoskedastic_CelebA_Ppc/0730_182905/lightning_logs\n"
+      "Missing logger folder: saved/log/Homoskedastic_CelebA_Ppc/0811_161619/lightning_logs\n"
      ]
     },
     {
@@ -124,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.10/dist-packages/lightning/pytorch/callbacks/model_checkpoint.py:652: Checkpoint directory /workspace/shai_hulud/ppc_experiments/saved/models/Homoskedastic_CelebA_Ppc/0730_182905 exists and is not empty.\n",
+      "/usr/local/lib/python3.10/dist-packages/lightning/pytorch/callbacks/model_checkpoint.py:652: Checkpoint directory /workspace/shai_hulud/ppc_experiments/saved/models/Homoskedastic_CelebA_Ppc/0811_161619 exists and is not empty.\n",
       "Restoring states from the checkpoint path at saved/models/Homoskedastic_CelebA_Ppc/0726_154019/checkpoint_99.ckpt\n",
       "/usr/local/lib/python3.10/dist-packages/lightning/pytorch/trainer/call.py:265: Be aware that when using `ckpt_path`, callbacks used to create the checkpoint need to be provided during `Trainer` instantiation. Please add the following callbacks: [\"ModelCheckpoint{'monitor': 'valid/loss', 'mode': 'min', 'every_n_train_steps': 0, 'every_n_epochs': 20, 'train_time_interval': None}\"].\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0,1,2,3,4,5,6,7]\n",
@@ -149,7 +149,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Sanity Checking: |                                                                                            …"
+       "Sanity Checking: |                                        | 0/? [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1351,18 +1351,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Test set FIDs:  99%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉  | 155/156 [00:58<00:00,  2.77it/s]/usr/local/lib/python3.10/dist-packages/torch/autograd/graph.py:744: UserWarning: Plan failed with a cudnnException: CUDNN_BACKEND_EXECUTION_PLAN_DESCRIPTOR: cudnnFinalize Descriptor Failed cudnn_status: CUDNN_STATUS_NOT_SUPPORTED (Triggered internally at ../aten/src/ATen/native/cudnn/Conv_v8.cpp:919.)\n",
+      "Test set FIDs:  99%|█████████████████████████▊| 155/156 [00:55<00:00,  2.79it/s]/usr/local/lib/python3.10/dist-packages/torch/autograd/graph.py:744: UserWarning: Plan failed with a cudnnException: CUDNN_BACKEND_EXECUTION_PLAN_DESCRIPTOR: cudnnFinalize Descriptor Failed cudnn_status: CUDNN_STATUS_NOT_SUPPORTED (Triggered internally at ../aten/src/ATen/native/cudnn/Conv_v8.cpp:919.)\n",
       "  return Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n",
-      "Test set FIDs: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 156/156 [00:58<00:00,  2.66it/s]\n",
-      "Test set FIDs: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 156/156 [01:37<00:00,  1.59it/s]\n",
-      "Test set FIDs: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 156/156 [01:37<00:00,  1.60it/s]\n",
-      "Test set FIDs: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 156/156 [01:38<00:00,  1.58it/s]\n",
-      "Test set FIDs: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 156/156 [02:17<00:00,  1.13it/s]\n",
-      "Test set FIDs: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 156/156 [01:28<00:00,  1.77it/s]\n",
-      "Test set FIDs: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 156/156 [01:41<00:00,  1.54it/s]\n",
-      "Test set FIDs: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 156/156 [01:37<00:00,  1.59it/s]\n",
-      "Test set FIDs: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 156/156 [01:29<00:00,  1.74it/s]\n",
-      "Test set FIDs: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 156/156 [01:31<00:00,  1.71it/s]\n"
+      "Test set FIDs: 100%|██████████████████████████| 156/156 [00:56<00:00,  2.78it/s]\n",
+      "Test set FIDs: 100%|██████████████████████████| 156/156 [01:31<00:00,  1.71it/s]\n",
+      "Test set FIDs: 100%|██████████████████████████| 156/156 [01:31<00:00,  1.70it/s]\n",
+      "Test set FIDs: 100%|██████████████████████████| 156/156 [01:38<00:00,  1.58it/s]\n",
+      "Test set FIDs: 100%|██████████████████████████| 156/156 [02:19<00:00,  1.12it/s]\n",
+      "Test set FIDs: 100%|██████████████████████████| 156/156 [01:24<00:00,  1.84it/s]\n",
+      "Test set FIDs: 100%|██████████████████████████| 156/156 [01:49<00:00,  1.42it/s]\n",
+      "Test set FIDs: 100%|██████████████████████████| 156/156 [01:38<00:00,  1.58it/s]\n",
+      "Test set FIDs: 100%|██████████████████████████| 156/156 [01:30<00:00,  1.71it/s]\n",
+      "Test set FIDs: 100%|██████████████████████████| 156/156 [01:28<00:00,  1.76it/s]\n"
      ]
     },
     {
@@ -1378,11 +1378,14 @@
    ],
    "source": [
     "fids = []\n",
+    "metrics = collections.defaultdict(lambda: [])\n",
     "data.setup(\"test\")\n",
     "\n",
     "for f in range(10):\n",
     "    for b, batch in enumerate(tqdm.tqdm(data.test_dataloader(), desc='Test set FIDs')):\n",
-    "        model.test_step(batch, b)\n",
+    "        ms = model.test_step(batch, b)\n",
+    "        for k, v in ms.items():\n",
+    "            metrics[k].append(v)\n",
     "    fids.append(model.metrics['fid'].compute())\n",
     "    model.metrics['fid'].reset()\n",
     "    model.graph.gmm = None\n",
@@ -1393,8 +1396,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "9d54af19-9b24-41a2-af80-4aadf942ac64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k, v in metrics.items():\n",
+    "    metrics[k] = torch.tensor(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b157607e-bf00-4347-a1f2-8e30a49a86d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ess': tensor(8.9171),\n",
+       " 'log_joint': tensor(-3043832.),\n",
+       " 'log_marginal': tensor(-2865761.2500),\n",
+       " 'loss': tensor(2865764.5000)}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{m: v.mean(dim=-1) for m, v in metrics.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "960975cb-7d58-4d5c-9bcb-c88a77b880fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ess': tensor(0.3458),\n",
+       " 'log_joint': tensor(104037.6406),\n",
+       " 'log_marginal': tensor(95703.6797),\n",
+       " 'loss': tensor(95706.6094)}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{m: v.std(dim=-1) for m, v in metrics.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e875e44c-cde1-4d6a-8923-b800403967a3",
    "metadata": {},
    "outputs": [],
    "source": []
