experiments/dcpc_emnist_eval: rename PPC to DCPC in Extended MNIST experiment
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/dcpc_emnist_eval.ipynb
+++ b/experiments/dcpc_emnist_eval.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/eli/AnacondaProjects/ppc_experiments\n"
+      "/home/eli/AnacondaProjects/dcpc_experiments\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "config, (data, model, trainer) = train.from_file(\"experiments/ppc_emnist_config.json\")"
+    "config, (data, model, trainer) = train.from_file(\"experiments/dcpc_emnist_config.json\")"
    ]
   },
   {
@@ -84,22 +84,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Missing logger folder: saved/log/EMnist_Ppc/0613_110306/lightning_logs\n",
-      "/home/eli/miniforge3/envs/ppc/lib/python3.11/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:653: Checkpoint directory /home/eli/AnacondaProjects/ppc_experiments/saved/models/EMnist_Ppc/0613_110306 exists and is not empty.\n",
-      "Restoring states from the checkpoint path at saved/models/EMnist_Ppc/0612_151249/checkpoint_1999.ckpt\n",
-      "/home/eli/miniforge3/envs/ppc/lib/python3.11/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:361: The dirpath has changed from '/home/eli/AnacondaProjects/ppc_experiments/saved/models/EMnist_Ppc/0612_151249' to '/home/eli/AnacondaProjects/ppc_experiments/saved/models/EMnist_Ppc/0613_110306', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
+      "Missing logger folder: saved/log/EMnist_Dcpc/0613_110306/lightning_logs\n",
+      "/home/eli/miniforge3/envs/dcpc/lib/python3.11/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:653: Checkpoint directory /home/eli/AnacondaProjects/dcpc_experiments/saved/models/EMnist_Dcpc/0613_110306 exists and is not empty.\n",
+      "Restoring states from the checkpoint path at saved/models/EMnist_Dcpc/0612_151249/checkpoint_1999.ckpt\n",
+      "/home/eli/miniforge3/envs/dcpc/lib/python3.11/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:361: The dirpath has changed from '/home/eli/AnacondaProjects/dcpc_experiments/saved/models/EMnist_Dcpc/0612_151249' to '/home/eli/AnacondaProjects/dcpc_experiments/saved/models/EMnist_Dcpc/0613_110306', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name       | Type       | Params\n",
       "------------------------------------------\n",
-      "0 | graph      | MnistPpc   | 319 K \n",
+      "0 | graph      | MnistDcpc   | 319 K \n",
       "1 | predictive | Predictive | 0     \n",
       "------------------------------------------\n",
       "319 K     Trainable params\n",
       "0         Non-trainable params\n",
       "319 K     Total params\n",
       "1.278     Total estimated model params size (MB)\n",
-      "Restored all states from the checkpoint at saved/models/EMnist_Ppc/0612_151249/checkpoint_1999.ckpt\n"
+      "Restored all states from the checkpoint at saved/models/EMnist_Dcpc/0612_151249/checkpoint_1999.ckpt\n"
      ]
     },
     {
@@ -125,7 +125,7 @@
     }
    ],
    "source": [
-    "trainer.fit(model, data, ckpt_path=\"saved/models/EMnist_Ppc/0612_151249/checkpoint_1999.ckpt\")"
+    "trainer.fit(model, data, ckpt_path=\"saved/models/EMnist_Dcpc/0612_151249/checkpoint_1999.ckpt\")"
    ]
   },
   {
@@ -137,8 +137,8 @@
     {
      "data": {
       "text/plain": [
-       "LightningPpc(\n",
-       "  (graph): MnistPpc(\n",
+       "LightningDcpc(\n",
+       "  (graph): MnistDcpc(\n",
        "    (prior): GaussianPrior()\n",
        "    (decoder1): ConditionalGaussian(\n",
        "      (decoder): Sequential(\n",
@@ -233,7 +233,7 @@
     "    axes[1, i].imshow(x_hats[i].squeeze().cpu().detach().numpy())\n",
     "    axes[1, i].set(xticklabels=[], yticklabels=[], xticks=[], yticks=[])\n",
     "\n",
-    "fig.savefig(\"ppc_emnist_recons.pdf\", bbox_inches=\"tight\")\n",
+    "fig.savefig(\"dcpc_emnist_recons.pdf\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -297,7 +297,7 @@
     "        axes[row, col].imshow(x_hats[row * 5 + col].squeeze().detach().cpu().numpy())\n",
     "        axes[row, col].set(xticklabels=[], yticklabels=[], xticks=[], yticks=[])\n",
     "\n",
-    "fig.savefig(\"ppc_emnist_predictive.pdf\", bbox_inches=\"tight\")\n",
+    "fig.savefig(\"dcpc_emnist_predictive.pdf\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -357,7 +357,7 @@
     "        axes[row, col].imshow(x_hats[row * 5 + col].squeeze().detach().cpu().numpy())\n",
     "        axes[row, col].set(xticklabels=[], yticklabels=[], xticks=[], yticks=[])\n",
     "\n",
-    "fig.savefig(\"ppc_emnist_prior.pdf\", bbox_inches=\"tight\")\n",
+    "fig.savefig(\"dcpc_emnist_prior.pdf\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
