experiments/dcpc_minibmnist_eval: rename to DCPC for Mini-BMNIST experiment
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/dcpc_minibmnist_eval.ipynb
+++ b/experiments/dcpc_minibmnist_eval.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/workspace/shai_hulud/ppc_experiments\n"
+      "/workspace/shai_hulud/dcpc_experiments\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "config, (data, model, trainer) = train.from_file(\"experiments/ppc_minibmnist_config.json\")"
+    "config, (data, model, trainer) = train.from_file(\"experiments/dcpc_minibmnist_config.json\")"
    ]
   },
   {
@@ -83,22 +83,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Missing logger folder: saved/log/MiniBouncingMnist_Ppc/0824_013325/lightning_logs\n",
-      "/usr/local/lib/python3.10/dist-packages/lightning/pytorch/callbacks/model_checkpoint.py:652: Checkpoint directory /workspace/shai_hulud/ppc_experiments/saved/models/MiniBouncingMnist_Ppc/0824_013325 exists and is not empty.\n",
-      "Restoring states from the checkpoint path at saved/models/MiniBouncingMnist_Ppc/0823_161752/checkpoint_999.ckpt\n",
-      "/usr/local/lib/python3.10/dist-packages/lightning/pytorch/callbacks/model_checkpoint.py:360: The dirpath has changed from '/workspace/shai_hulud/ppc_experiments/saved/models/MiniBouncingMnist_Ppc/0823_161752' to '/workspace/shai_hulud/ppc_experiments/saved/models/MiniBouncingMnist_Ppc/0824_013325', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
+      "Missing logger folder: saved/log/MiniBouncingMnist_Dcpc/0824_013325/lightning_logs\n",
+      "/usr/local/lib/python3.10/dist-packages/lightning/pytorch/callbacks/model_checkpoint.py:652: Checkpoint directory /workspace/shai_hulud/dcpc_experiments/saved/models/MiniBouncingMnist_Dcpc/0824_013325 exists and is not empty.\n",
+      "Restoring states from the checkpoint path at saved/models/MiniBouncingMnist_Dcpc/0823_161752/checkpoint_999.ckpt\n",
+      "/usr/local/lib/python3.10/dist-packages/lightning/pytorch/callbacks/model_checkpoint.py:360: The dirpath has changed from '/workspace/shai_hulud/dcpc_experiments/saved/models/MiniBouncingMnist_Dcpc/0823_161752' to '/workspace/shai_hulud/dcpc_experiments/saved/models/MiniBouncingMnist_Dcpc/0824_013325', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0,1,2,3,4,5,6,7]\n",
       "\n",
       "  | Name       | Type             | Params | Mode \n",
       "--------------------------------------------------------\n",
-      "0 | graph      | BouncingMnistPpc | 397 K  | train\n",
+      "0 | graph      | BouncingMnistDcpc | 397 K  | train\n",
       "1 | predictive | Predictive       | 0      | train\n",
       "--------------------------------------------------------\n",
       "397 K     Trainable params\n",
       "0         Non-trainable params\n",
       "397 K     Total params\n",
       "1.589     Total estimated model params size (MB)\n",
-      "Restored all states from the checkpoint at saved/models/MiniBouncingMnist_Ppc/0823_161752/checkpoint_999.ckpt\n"
+      "Restored all states from the checkpoint at saved/models/MiniBouncingMnist_Dcpc/0823_161752/checkpoint_999.ckpt\n"
      ]
     },
     {
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "trainer.fit(model, data, ckpt_path=\"saved/models/MiniBouncingMnist_Ppc/0823_161752/checkpoint_999.ckpt\")"
+    "trainer.fit(model, data, ckpt_path=\"saved/models/MiniBouncingMnist_Dcpc/0823_161752/checkpoint_999.ckpt\")"
    ]
   },
   {
@@ -136,8 +136,8 @@
     {
      "data": {
       "text/plain": [
-       "LightningPpc(\n",
-       "  (graph): BouncingMnistPpc(\n",
+       "LightningDcpc(\n",
+       "  (graph): BouncingMnistDcpc(\n",
        "    (decoder): DigitsDecoder(\n",
        "      (decoder): Sequential(\n",
        "        (0): Linear(in_features=10, out_features=200, bias=True)\n",
