experiments/dcpc_mnist_eval: rename PPC->DCPC in initial MNIST experiment
Signed-off-by: Eli Sennesh <eli.sennesh@vanderbilt.edu>

--- a/experiments/dcpc_mnist_eval.ipynb
+++ b/experiments/dcpc_mnist_eval.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/eli/AnacondaProjects/ppc_experiments\n"
+      "/home/eli/AnacondaProjects/dcpc_experiments\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "config, (data, model, trainer) = train.from_file(\"experiments/ppc_mnist_config.json\")"
+    "config, (data, model, trainer) = train.from_file(\"experiments/dcpc_mnist_config.json\")"
    ]
   },
   {
@@ -84,22 +84,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Missing logger folder: saved/log/Mnist_Ppc/0518_140612/lightning_logs\n",
-      "/home/eli/miniforge3/envs/ppc/lib/python3.11/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:653: Checkpoint directory /home/eli/AnacondaProjects/ppc_experiments/saved/models/Mnist_Ppc/0518_140612 exists and is not empty.\n",
-      "Restoring states from the checkpoint path at saved/models/Mnist_Ppc/0518_003102/checkpoint_1999.ckpt\n",
-      "/home/eli/miniforge3/envs/ppc/lib/python3.11/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:361: The dirpath has changed from '/home/eli/AnacondaProjects/ppc_experiments/saved/models/Mnist_Ppc/0518_003102' to '/home/eli/AnacondaProjects/ppc_experiments/saved/models/Mnist_Ppc/0518_140612', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
+      "Missing logger folder: saved/log/Mnist_Dcpc/0518_140612/lightning_logs\n",
+      "/home/eli/miniforge3/envs/dcpc/lib/python3.11/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:653: Checkpoint directory /home/eli/AnacondaProjects/dcpc_experiments/saved/models/Mnist_Dcpc/0518_140612 exists and is not empty.\n",
+      "Restoring states from the checkpoint path at saved/models/Mnist_Dcpc/0518_003102/checkpoint_1999.ckpt\n",
+      "/home/eli/miniforge3/envs/dcpc/lib/python3.11/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:361: The dirpath has changed from '/home/eli/AnacondaProjects/dcpc_experiments/saved/models/Mnist_Dcpc/0518_003102' to '/home/eli/AnacondaProjects/dcpc_experiments/saved/models/Mnist_Dcpc/0518_140612', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name       | Type       | Params\n",
       "------------------------------------------\n",
-      "0 | graph      | MnistPpc   | 319 K \n",
+      "0 | graph      | MnistDcpc   | 319 K \n",
       "1 | predictive | Predictive | 0     \n",
       "------------------------------------------\n",
       "319 K     Trainable params\n",
       "0         Non-trainable params\n",
       "319 K     Total params\n",
       "1.278     Total estimated model params size (MB)\n",
-      "Restored all states from the checkpoint at saved/models/Mnist_Ppc/0518_003102/checkpoint_1999.ckpt\n"
+      "Restored all states from the checkpoint at saved/models/Mnist_Dcpc/0518_003102/checkpoint_1999.ckpt\n"
      ]
     },
     {
@@ -125,7 +125,7 @@
     }
    ],
    "source": [
-    "trainer.fit(model, data, ckpt_path=\"saved/models/Mnist_Ppc/0518_003102/checkpoint_1999.ckpt\")"
+    "trainer.fit(model, data, ckpt_path=\"saved/models/Mnist_Dcpc/0518_003102/checkpoint_1999.ckpt\")"
    ]
   },
   {
@@ -137,8 +137,8 @@
     {
      "data": {
       "text/plain": [
-       "LightningPpc(\n",
-       "  (graph): MnistPpc(\n",
+       "LightningDcpc(\n",
+       "  (graph): MnistDcpc(\n",
        "    (prior): GaussianPrior()\n",
        "    (decoder1): ConditionalGaussian(\n",
        "      (decoder): Sequential(\n",
@@ -305,7 +305,7 @@
     "    axes[0, i].imshow(xs[i].squeeze().detach().numpy())\n",
     "    axes[1, i].imshow(x_hats[i].squeeze().detach().numpy())\n",
     "\n",
-    "fig.savefig(\"ppc_mnist_recons.pdf\", bbox_inches=\"tight\")\n",
+    "fig.savefig(\"dcpc_mnist_recons.pdf\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -353,7 +353,7 @@
     "    for j in range(4):\n",
     "        axes[i, j].imshow(x_hats[i, j].squeeze().detach().numpy())\n",
     "\n",
-    "fig.savefig(\"ppc_mnist_samples.pdf\", bbox_inches=\"tight\")\n",
+    "fig.savefig(\"dcpc_mnist_samples.pdf\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
